--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.10.4",
     "nuxt": "^3.9.1",
+    "nuxt-headlessui": "^1.1.5",
     "vue": "^3.4.10",
     "vue-router": "^4.2.5"
   }
