--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "nuxt-headlessui": "^1.1.5",
     "vue": "^3.4.10",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.1.1"
   }
 }
