--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/tailwindcss": "^6.10.4",
     "nuxt": "^3.9.1",
     "nuxt-headlessui": "^1.1.5",
+    "prisma": "^5.8.1",
     "vue": "^3.4.10",
     "vue-router": "^4.2.5"
   },
